--- a/docs/hotplug2.8
+++ b/docs/hotplug2.8
@@ -22,6 +22,8 @@ Keep hotplug2 running even after all events have been processed, waiting for mor
 .TP 
 \fB\-\-dumb\fR, \fB\-\-no\-dumb\fR
 Run or do not run hotplug2 in dumb mode. Dumb mode means that rules are being ignored, the only action taken is mload modules to all devices whose uevent exports MODALIAS. Only available if compiled with HAVE_RULES.
+\fB\-\-override\fR, \fB\-\-no\-override\fR
+Allows hotplug2 behavior overriding for different rules, using various flags. See hotplug2 rules documentation for details. The default is not to allow overriding, the flags are therefore ignored.
 .TP 
 \fB\-\-max\-children <value>\fR
 Set the value of maximum children hotplug2 may have running simultaneously. Default is 20.
@@ -31,6 +33,8 @@ Sets the application used to perform coldplug. Default is '/sbin/udevtrigger'. I
 .TP 
 \fB\-\-set\-modprobe\-cmd <cmd>\fR
 Sets the application used to perform modprobe. It only gets used in dumb mode. Default is to autodetect: if '/bin/modprobe' is from module\-init\-tools, use '/sbin/modprobe', otherwise use '/sbin/hotplug2\-modwrap'.
+\fB\-\-set\-rules\-file <file>\fR
+Sets the path to the file containing hotplug2 rules.
 .SH "SIGNALS"
 .TP 
 \fBSIGUSR1\fR
